--- a/gb/21/10/18/n13311518.md
+++ b/gb/21/10/18/n13311518.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ixbbwc3288/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ixbbwc3288/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ixbbwc3288/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ixbbwc3288/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ixbbwc3288/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>土耳其中文学校文化营 推广正体字和台湾文化</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13311559-2110172343492378-600x400.jpg" />
 <h6>土耳其中文学校10月15至17日举办“第2届台湾正体汉字文化营”，推广正体汉字和台湾文化。驻土耳其代表黄志扬（着西装者）15日参加始业式。（张家兰提供／中央社）
 </h6>
 <hr>
-	<p>【大纪元2021年10月18日讯】<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E5%9C%9F%E8%80%B3%E5%85%B6.md#1">土耳其</a>中文学校过去一年增设两所分校、学生倍增，“儿童华语文能力测验”10月16日也首度在土耳其登场。学校15至17日举办文化营，推广正体<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E6%B1%89%E5%AD%97.md#1">汉字</a>和<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E6%96%87%E5%8C%96.md#1">台湾文化</a>。</p>
-<p>为贯彻2019冠状病毒疾病（中共病毒）防疫工作，<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E5%9C%9F%E8%80%B3%E5%85%B6.md#1">土耳其</a>中文学校自去年5月起改成线上授课。为了让孩子们重拾学习乐趣，并让台湾子弟有机会加强交流，学校在地中海岸城巿安塔利亚（Antalya）举办“第2届台湾正体<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E6%B1%89%E5%AD%97.md#1">汉字</a>文化营”，共有17名学员参加。</p>
-<figure id="attachment_13311560" aria-describedby="caption-attachment-13311560" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13311560-2110172345412378.jpg"><img class="size-large wp-image-13311560" title="土耳其中文学校台湾正体汉字文化营" src="https://i.epochtimes.com/assets/uploads/2021/10/id13311560-2110172345412378-600x400.jpg" alt="土耳其中文学校台湾正体汉字文化营" width="600" b="400" /></a><figcaption id="caption-attachment-13311560" class="wp-caption-text">土耳其中文学校15至17日举办“第2届台湾正体汉字文化营”，设计文字流变、书画正字、正字拼图等体验活动，带领学童在家长陪伴下学习正体汉字和<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E6%96%87%E5%8C%96.md#1">台湾文化</a>。（中央社）</figcaption></figure>
+	<p>【大纪元2021年10月18日讯】<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9C%9F%E8%80%B3%E5%85%B6.md#1">土耳其</a>中文学校过去一年增设两所分校、学生倍增，“儿童华语文能力测验”10月16日也首度在土耳其登场。学校15至17日举办文化营，推广正体<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B1%89%E5%AD%97.md#1">汉字</a>和<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E6%96%87%E5%8C%96.md#1">台湾文化</a>。</p>
+<p>为贯彻2019冠状病毒疾病（中共病毒）防疫工作，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%9C%9F%E8%80%B3%E5%85%B6.md#1">土耳其</a>中文学校自去年5月起改成线上授课。为了让孩子们重拾学习乐趣，并让台湾子弟有机会加强交流，学校在地中海岸城巿安塔利亚（Antalya）举办“第2届台湾正体<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%B1%89%E5%AD%97.md#1">汉字</a>文化营”，共有17名学员参加。</p>
+<figure id="attachment_13311560" aria-describedby="caption-attachment-13311560" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13311560-2110172345412378.jpg"><img class="size-large wp-image-13311560" title="土耳其中文学校台湾正体汉字文化营" src="https://i.epochtimes.com/assets/uploads/2021/10/id13311560-2110172345412378-600x400.jpg" alt="土耳其中文学校台湾正体汉字文化营" width="600" b="400" /></a><figcaption id="caption-attachment-13311560" class="wp-caption-text">土耳其中文学校15至17日举办“第2届台湾正体汉字文化营”，设计文字流变、书画正字、正字拼图等体验活动，带领学童在家长陪伴下学习正体汉字和<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8F%B0%E6%B9%BE%E6%96%87%E5%8C%96.md#1">台湾文化</a>。（中央社）</figcaption></figure>
 <p>土耳其中文学校于2015年向中华民国侨务委员会登记立案。疫情肆虐之际，这所侨校已从原本安卡拉、安塔利亚两所分校，过去一年又在第一大城伊斯坦堡（Istanbul）、西北部柯加里省（Kocaeli）省会伊兹米特（Izmit）增设分校，学生人数则从20人增为43人，反映更多台湾子弟有充实中文教育的实际需求。</p>
 <p>校长张家兰与学校教师陈璟宜、杨心瑶为文化营设计文字流变、书画正字、制作汉字书签、正字拼图、辨别相似字等有趣的体验活动，由学校家长夏绣凤、陈孟淳和已念大学的台湾子弟黄心蔓、黄午康担任助教，带领学童在家长陪伴下学习正体汉字和台湾文化。</p>
-<figure id="attachment_13311563" aria-describedby="caption-attachment-13311563" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13311563-2110172346302378.jpg"><img class="size-large wp-image-13311563" title="台湾正体汉字文化营 侨校土耳其推广台湾文化" src="https://i.epochtimes.com/assets/uploads/2021/10/id13311563-2110172346302378-600x400.jpg" alt="台湾正体汉字文化营 侨校土耳其推广台湾文化" width="600" b="400" /></a><figcaption id="caption-attachment-13311563" class="wp-caption-text">土耳其中文学校15至17日举办“第2届台湾<ahref="https://github.com/ixbbwc3288/djy/blob/master/gb/tag/%E6%AD%A3%E4%BD%93%E5%AD%97.md#1">正体字</a> 文化营”，设计文字流变、书画正字、正字拼图等体验活动，带领学童在家长陪伴下学习正体汉字和台湾文化。（中央社）</figcaption></figure>
+<figure id="attachment_13311563" aria-describedby="caption-attachment-13311563" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13311563-2110172346302378.jpg"><img class="size-large wp-image-13311563" title="台湾正体汉字文化营 侨校土耳其推广台湾文化" src="https://i.epochtimes.com/assets/uploads/2021/10/id13311563-2110172346302378-600x400.jpg" alt="台湾正体汉字文化营 侨校土耳其推广台湾文化" width="600" b="400" /></a><figcaption id="caption-attachment-13311563" class="wp-caption-text">土耳其中文学校15至17日举办“第2届台湾<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%AD%A3%E4%BD%93%E5%AD%97.md#1">正体字</a> 文化营”，设计文字流变、书画正字、正字拼图等体验活动，带领学童在家长陪伴下学习正体汉字和台湾文化。（中央社）</figcaption></figure>
 <p>&nbsp;</p>
 <p>张家兰说：“我们来自台湾，所以会特别去强调教导孩子正体汉字，并且从中认识台湾文化。”</p>
 <p>“他们因为疫情而无法回台湾，我们希望透过特别设计的夜巿体验活动，以及怀旧系列的翁仔标（旧时供儿童玩乐用的纸牌）、戳戳乐等游戏，让孩子也能拥有台湾体验。”她告诉中央社记者：“我自己也是家长，非常开心可以让孩子在土耳其体验到台湾文化。”</p>
@@ -28,41 +28,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/19/6/21/n11338753.md#1">中华学校近500名学生结业 毕业生：帮助他人是学中文动力</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/19/9/28/n11552186.md#1">教学20年 卢业珮谈学中文重要</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/19/10/28/n11617616.md#1">美官方在台设华语中心 首批22学子来学中文</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/19/11/4/n11630937.md#1">士嘉堡Terry Fox小学中文班招生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/6/21/n11338753.md#1">中华学校近500名学生结业 毕业生：帮助他人是学中文动力</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/28/n11552186.md#1">教学20年 卢业珮谈学中文重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/28/n11617616.md#1">美官方在台设华语中心 首批22学子来学中文</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/4/n11630937.md#1">士嘉堡Terry Fox小学中文班招生</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/12/19/n9970786.md#1" target="_blank">明白人：“平型关大捷”的真相</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/8/n11708865.md#1" target="_blank">香港立法会议员胡志伟：很佩服法轮功学员</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/22/n11888452.md#1" target="_blank">“土改”和“文革”时的离奇报应</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/6/16/n8005208.md#1" target="_blank">美肿瘤学会收录法轮功延长癌患生命论文</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/8/n13291558.md#1">【未解之谜】传奇女祭司 三千年后重回神庙</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/13/n13302112.md#1">【百年真相】“歌仙”之死 陈歌辛农场受难</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/11/n13297368.md#1">【百年真相】文革的殉难者 老舍沉湖之谜</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/4/n13281535.md#1">无神论者向神的宣战</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/14/n13305026.md#1">【未解之谜】透视千里之外 日本“千里眼之女”</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310702.md#1">【马克时空】印度Su-30战机 年底赴日进行缠斗训练</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308362.md#1">【军事热点】美运用印太盟友优势互补 对抗中共</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13310940.md#1">【舞蹈三剑客】意外发现：京剧挑战</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/15/n13307664.md#1">【新闻看点】党报诡异捧习父子 反习势力蠢动？</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308259.md#1">50名中国留美学生身份被终止 面临驱逐出境</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13309275.md#1">普京发表北京无需武统台湾言论 引多方解读</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/15/n13307478.md#1">50岁黎姿晒健身照 分享保持好身材秘笈</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/15/n13306302.md#1">阿汤哥看棒球赛 脸肿得像另外一个人</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/17/n13309580.md#1">对唱《玻璃心》应验 黄明志陈芳语微博被消失</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308101.md#1">《被遗忘的战役》影评：三方视角 营造战火下的人性光辉</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/15/n13306472.md#1">【疫情10.15】疫苗豁免遭拒 伊州护士起诉医院</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/16/n13308939.md#1">维生素B群前3名食物大公开 有些你常常吃</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/13/n13302651.md#1">哈佛80年研究 揭开长寿一大秘诀</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/15/n13305937.md#1">疫情下降的原因不是疫苗？专家：有2点是根本</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/15/n13306302.md#1">阿汤哥看棒球赛 脸肿得像另外一个人</a></li>
-<li><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/15/n13305930.md#1">拥有百年历史 美国小镇以72.5万美元求售</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/21/n13660848.md#1">【未解之谜】为何通灵者 看不透自己的未来？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674654.md#1">【十字路口】北京望俄战败？王毅拉拢印度踢铁板</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675431.md#1">【舞蹈三剑客】片尾彩蛋！三剑客公开纾压秘方</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674186.md#1">上海疫情大爆发 张文宏言论引炮轰</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13673923.md#1">挺俄反俄两派互搏 中共要全国学校紧跟党立场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673050.md#1">俄乌战争后效应 外资大规模撤离大陆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672123.md#1">Selina直播中突离席 要“带男友进来”吓坏黄子佼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673289.md#1">参加西藏之家音乐会 基努李维主演电影遭下架</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673381.md#1">“一代笑匠”许冠文获香港金像奖终身成就奖</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674280.md#1">TAKAHIRO与武井咲次女出生：热闹中感受幸福</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/22/n13663634.md#1">姜是厨房常见药 能暖胃、去湿气 2情况不能吃</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669562.md#1">太晚吃东西真的会胖？营养饮食5个常见迷思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/14/n13645681.md#1">不吃油、米饭？让大脑开心的食物吃对就不怕</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13672739.md#1">【健康1+1】CDC：废水预测病毒升 下波高峰不是BA2？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ixbbwc3288/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ixbbwc3288/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/18/n13311518.htm">土耳其中文学校文化营 推广正体字和台湾文化</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/18/n13311518.htm">土耳其中文学校文化营 推广正体字和台湾文化</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ixbbwc3288/djy/blob/master/gb/21/10/18/n13311518.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ixbbwc3288/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ixbbwc3288/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ixbbwc3288/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ixbbwc3288/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/10/18/n13311518.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
